--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -1,24 +1,46 @@
 %% literatura
 \begin{thebibliography}{99}
-    \bibitem{Kontejner} \textit{Kontejner} [online]. [cit. 2022-01-10]. Dostupné z~\url{https://www.docker.com/resources/what-container/}
-    \bibitem{Framework} \textit{Framework} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://codeinstitute.net/global/blog/what-is-a-framework/}
-    \bibitem{Skalovani} \textit{Škálování} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.cyberlinkasp.com/insights/what-is-software-scalability-and-why-is-it-important/}
-    \bibitem{JSON} \textit{JSON} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.json.org/json-en.html}
-    \bibitem{Transpilace} \textit{Transpilace} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.digitalocean.com/community/tutorials/javascript-transpilers-what-they-are-why-we-need-them}
+    
+    \bibitem{Montessori} MONTESSORI, Maria. \textit{Londýnské přednášky.}  Praha: Portál, 2019.
+    \bibitem{VyvojovaPsychologie}  PROKEŠ, Josef. \textit{Vývojová psychologie} – učební text. Studijní text. [online]. [cit. 2022-03-20]. Dostupné z~\url{https://www.fi.muni.cz/~qprokes/socka/socka3.html}
+    \bibitem{ASE} HARLEN, Wynne (ed.). ASE \textit{guide to primary science education.} Hatfield: Association for Science Education, 2011.
     \bibitem{Cache} \textit{Cache} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.businessinsider.com/what-is-cache}
-    \bibitem{Flutter} \textit{Flutter} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://flutter.dev/}
+    \bibitem{CDN} \textit{CDN} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://www.cloudflare.com/learning/cdn/what-is-a-cdn/}
+    \bibitem{Framework} \textit{Framework} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://codeinstitute.net/global/blog/what-is-a-framework/}
+    \bibitem{JSON} \textit{JSON} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.json.org/json-en.html}
+    \bibitem{Kontejner} \textit{Kontejner} [online]. [cit. 2022-01-10]. Dostupné z~\url{https://www.docker.com/resources/what-container/}
+    \bibitem{Coroutine} \textit{Coroutine} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://docs.unity3d.com/Manual/Coroutines.html}
     \bibitem{OpenSource} \textit{Open Source} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://opensource.com/resources/what-open-source}
+    \bibitem{ORM} \textit{What are ORMs?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.prisma.io/docs/concepts/overview/prisma-in-your-stack/is-prisma-an-orm#what-are-orms}
+    \bibitem{Skalovani} \textit{Škálování} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.cyberlinkasp.com/insights/what-is-software-scalability-and-why-is-it-important/}
+    \bibitem{Transpilace} \textit{Transpilace} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.digitalocean.com/community/tutorials/javascript-transpilers-what-they-are-why-we-need-them}
+    \bibitem{WebSocket} \textit{WebSockets} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API}
     \bibitem{Csharp} \textit{Nejjednoduší programovací jazyky na naučení} [online]. [cit. 2021-01-10]. Dostupné z~\url{https://careerkarma.com/blog/easiest-programming-languages-to-learn/#Csharp}
+    \bibitem{Unity} \textit{Unity} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://unity.com/}
+    \bibitem{JavaScript} \textit{What is JavaScript?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript}
     \bibitem{TypeScript} \textit{TypeScript} [online]. [cit. 2022-01-10]. Dostupné z~\url{https://www.typescriptlang.org/}
+    \bibitem{React} \textit{React.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://reactjs.org/}
+    \bibitem{Next} \textit{What is Next.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://nextjs.org/learn/foundations/about-nextjs/what-is-nextjs}
+    \bibitem{Node} \textit{About Node.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://nodejs.org/en/about/}
+    \bibitem{GraphQL} \textit{What is GraphQL?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.redhat.com/en/topics/api/what-is-graphql}
+    \bibitem{MongoDB} \textit{What is MongoDB?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.mongodb.com/what-is-mongodb}
     \bibitem{Prisma} \textit{Prisma} [online]. [cit. 2022-01-28]. Dostupné z~\url{https://www.prisma.io/docs/concepts/overview/what-is-prisma}
     \bibitem{PubSub} \textit{PubSub} [online]. [cit. 2022-01-28]. Dostupné z~\url{https://redis.io/topics/pubsub}
+    \bibitem{Redis} \textit{Redis} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://redis.io/}
+    \bibitem{Flutter} \textit{Flutter} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://flutter.dev/}
+    \bibitem{Docker} \textit{Docker} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.docker.com/}
+    \bibitem{Kubernetes} \textit{What is Kubernetes?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/}
+    \bibitem{TensorFlow} \textit{TensorFlow} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.tensorflow.org/}
+    \bibitem{Blender} \textit{About Blender} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.blender.org/about/}
+    \bibitem{Figma} \textit{Figma} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://webdesign.tutsplus.com/articles/what-is-figma--cms-32272}
+    \bibitem{What-is-AI} \textit{What is AI} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://borghese.di.unimi.it/Teaching/AdvancedIntelligentSystems/Old/IntelligentSystems_2008_2009/Old/IntelligentSystems_2005_2006/Documents/Symbolic/04_McCarthy_whatisai.pdf}
+    \bibitem{IBM-AI} \textit{IBM - What is AI} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://www.ibm.com/cloud/learn/what-is-artificial-intelligence}
+    \bibitem{IBM-CV} \textit{IBM - What is computer vision} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://www.ibm.com/topics/computer-vision}
     \bibitem{bcrypt} \textit{bcrypt} [online]. [cit. 2022-01-28]. Dostupné z~\url{https://auth0.com/blog/hashing-in-action-understanding-bcrypt/}
-    \bibitem{CDN} \textit{CDN} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://www.cloudflare.com/learning/cdn/what-is-a-cdn/}
     \bibitem{Cloudflare-pages} \textit{Cloudflare Pages} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://pages.cloudflare.com/}
     \bibitem{Cloudflare-cdn} \textit{Cloudflare CDN} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://www.cloudflare.com/cdn/}
     \bibitem{react-unity-webgl} \textit{react-unity-webgl} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://www.npmjs.com/package/react-unity-webgl}
     \bibitem{AssetBundle} \textit{AssetBundle} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://docs.unity3d.com/Manual/AssetBundlesIntro.html}
-    \bibitem{Coroutine} \textit{Coroutine} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://docs.unity3d.com/Manual/Coroutines.html}
     \bibitem{SharedPreferences} \textit{SharedPreferences} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://developer.android.com/training/data-storage/shared-preferences}
     \bibitem{NSUserDefaults} \textit{NSUserDefaults} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://developer.apple.com/documentation/foundation/nsuserdefaults}
     \bibitem{ImagePicker} \textit{ImagePicker} [online]. [cit. 2022-02-13]. Dostupné z~\url{https://pub.dev/packages/image_picker}
@@ -28,22 +50,6 @@
     \bibitem{Injection} \textit{Injection} [online]. [cit. 2022-03-03]. Dostupné z~\url{https://owasp.org/Top10/A03_2021-Injection/}
     \bibitem{Validator} \textit{Validator} [online]. [cit. 2022-03-03]. Dostupné z~\url{https://www.npmjs.com/package/validator}
     \bibitem{VulnerableAndOutdatedComponents} \textit{Vulnerable and Outdated Components} [online]. [cit. 2022-03-03]. Dostupné z~\url{https://owasp.org/Top10/A06_2021-Vulnerable_and_Outdated_Components/}
-    \bibitem{What-is-AI} \textit{What is AI} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://borghese.di.unimi.it/Teaching/AdvancedIntelligentSystems/Old/IntelligentSystems_2008_2009/Old/IntelligentSystems_2005_2006/Documents/Symbolic/04_McCarthy_whatisai.pdf}
-    \bibitem{IBM-AI} \textit{IBM - What is AI} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://www.ibm.com/cloud/learn/what-is-artificial-intelligence}
-    \bibitem{IBM-CV} \textit{IBM - What is computer vision} [online]. [cit. 2022-03-04]. Dostupné z~\url{https://www.ibm.com/topics/computer-vision}
     \bibitem{LowPoly} \textit{Low Poly} [online]. [cit. 2022-03-06]. Dostupné z~\url{https://blog.displate.com/low-poly-art/}
     \bibitem{BoxModeling} \textit{BoxModeling} [online]. [cit. 2022-03-06]. Dostupné z~\url{https://it-s.com/what-is-box-modeling/}
-    \bibitem{Montessori} MONTESSORI, Maria. \textit{Londýnské přednášky.}  Praha: Portál, 2019.
-    \bibitem{VyvojovaPsychologie}  PROKEŠ, Josef. \textit{Vývojová psychologie} – učební text. Studijní text. [online]. [cit. 2022-03-20]. Dostupné z~\url{https://www.fi.muni.cz/~qprokes/socka/socka3.html}
-    \bibitem{ASE} HARLEN, Wynne (ed.). ASE \textit{guide to primary science education.} Hatfield: Association for Science Education, 2011.
-    \bibitem{ORM} \textit{What are ORMs?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://www.prisma.io/docs/concepts/overview/prisma-in-your-stack/is-prisma-an-orm#what-are-orms}
-    \bibitem{WebSocket} \textit{WebSockets} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API}
-    \bibitem{JavaScript} \textit{What is JavaScript?} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript}
-    \bibitem{React} \textit{React.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://reactjs.org/}
-    \bibitem{Next} \textit{What is Next.js} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://nextjs.org/learn/foundations/about-nextjs/what-is-nextjs}
-    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
-    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
-    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
-    % \bibitem{} \textit{} [online]. [cit. 2022-03-22]. Dostupné z~\url{}
-    
 \end{thebibliography}
