--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt, a4paper,
-  %oneside,      %% -- odkomentujte, pokud chcete svou práci mít pouze jednostrannou, mezera pro hřbet pak automaticky bude pouze na levé straně
- twoside,        %% -- pro oboustranné práce, mezera pro hřbet následně střídá strany.
+  oneside,      %% -- odkomentujte, pokud chcete svou práci mít pouze jednostrannou, mezera pro hřbet pak automaticky bude pouze na levé straně
+%  twoside,        %% -- pro oboustranné práce, mezera pro hřbet následně střídá strany.
  openright
 ]{report}
 
