--- a/texts/initial.tex
+++ b/texts/initial.tex
@@ -69,7 +69,7 @@
 
 \vspace{24 pt}
 
-\noindent V~Pardubicích dne x. xxxx 2022 \dotfill{}\hspace{\stretch{0.5}} 
+\noindent V~Pardubicích dne 23. 3. 2022 \dotfill{}\hspace{\stretch{0.5}} 
 
 \hspace{6cm} Michal Maděra, Josef Kahoun
 
@@ -97,7 +97,7 @@ Chtěli bychom poděkovat našim učitelům: RNDr. Janu Koupilovi, Ph.D. za vede
 
 \noindent{\Large{\bfseries{Abstract}}}
 
-\noindent This theses documents the design and development of the Codeventure game focused on the development of algorithmic and programming skills of children, aimed at younger school age. The implementation of the project includes a backend part, a mobile application in the role of a game controller and a web frontend in the role of a display. Part of the solution is the use of artificial intelligence for machine image recognition.
+\noindent This thesis documents the design and development of the Codeventure game focused on the development of algorithmic and programming skills of children, aimed at younger school age. The implementation of the project includes a backend part, a mobile application in the role of a game controller and a web frontend in the role of a display. Part of the solution is the use of artificial intelligence for machine image recognition.
 
 \vspace{18pt}
 
