--- a/texts/literature.tex
+++ b/texts/literature.tex
@@ -4,6 +4,7 @@
     \bibitem{Montessori} MONTESSORI, Maria. \textit{Londýnské přednášky.}  Praha: Portál, 2019.
     \bibitem{VyvojovaPsychologie}  PROKEŠ, Josef. \textit{Vývojová psychologie} – učební text. Studijní text. [online]. [cit. 2022-03-20]. Dostupné z~\url{https://www.fi.muni.cz/~qprokes/socka/socka3.html}
     \bibitem{ASE} HARLEN, Wynne (ed.). ASE \textit{guide to primary science education.} Hatfield: Association for Science Education, 2011.
+    \bibitem{Gamification} \textit{Benefits of Gamification} [online]. [cit. 2022-03-22]. Dostupné z~\url{https://ssec.si.edu/stemvisions-blog/5-benefits-gamification}
     \bibitem{Cache} \textit{Cache} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://www.businessinsider.com/what-is-cache}
     \bibitem{CDN} \textit{CDN} [online]. [cit. 2022-02-12]. Dostupné z~\url{https://www.cloudflare.com/learning/cdn/what-is-a-cdn/}
     \bibitem{Framework} \textit{Framework} [online]. [cit. 2022-01-22]. Dostupné z~\url{https://codeinstitute.net/global/blog/what-is-a-framework/}
